--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -18,6 +18,11 @@
       avatar: https://pub-noionion.oss-cn-hangzhou.aliyuncs.com/head.jpg
       descr: 用这生命中的每一秒，给自己一个不后悔的未来：
       siteshot: https://pub-noionion.oss-cn-hangzhou.aliyuncs.com/noionion.top.png
+    - name: 安知鱼
+      link: https://blog.anheyu.com/
+      avatar: https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg
+      descr: 生活明朗，万物可爱
+      siteshot: https://npm.elemecdn.com/anzhiyu-theme-static@1.1.6/img/blog.anheyu.com.jpg
 - class_name: 『2025』[2]
   class_desc: 在2025年添加的网站
   flink_style: not-img-link
@@ -50,11 +55,9 @@
       descr: 随风飘起 如同浮云
     - name: 苏晓河生活站（还未想好名字）
       link: https://cat.sxiaohe.top/
-      siteshot: https://www.sxiaohe.top/img/link/苏晓河.avif
       avatar: https://www.sxiaohe.top/img/avatar.avif
       descr: 随风飘起 如同浮云
     - name: jsd镜像站
       link: https://jsd.sxiaohe.top/
-      siteshot: https://www.sxiaohe.top/img/link/苏晓河.avif
       avatar: https://www.sxiaohe.top/img/avatar.avif
       descr: 自用
