--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -63,6 +63,11 @@
       avatar: https://bu.dusays.com/2023/06/23/64959cf745a4d.png
       descr: 准时不定期更新
       siteshot: https://bu.dusays.com/2023/06/28/649c105e00a4f.png
+    - name: 小吉崽汁の窝
+      link: https://wuxingzzz.top
+      avatar: https://www.wuxingzzz.top/hexo/1716691173759791105.jpg
+      siteshot: https://www.wuxingzzz.top/article/1592180893591904258.jpg
+      descr: A programmer of vegetable chicken
 - class_name: 『博主』[3]
   class_desc: 窝自己以及旗下网站（公示）
   flink_style: img-link
