--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -82,8 +82,8 @@
   flink_style: img-link
   random: true
   link_list:
-    - name: 苏晓河
-      link: https://www.sxiaohe.top/
+    - name: 莫言小筑
+      link: https://www.myxz.top/
       siteshot: https://www.sxiaohe.top/img/link/苏晓河.avif
       avatar: https://www.sxiaohe.top/img/avatar.avif
       descr: 随风飘起 如同浮云
