--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -84,8 +84,8 @@
   link_list:
     - name: 莫言小筑
       link: https://www.myxz.top/
-      siteshot: https://www.sxiaohe.top/img/link/苏晓河.avif
-      avatar: https://www.sxiaohe.top/img/avatar.avif
+      siteshot: https://www.myxz.top/img/link/苏晓河.avif
+      avatar: https://www.myxz.top/img/avatar.avif
       descr: 随风飘起 如同浮云
     - name: 苏晓河生活站（还未想好名字）
       link: https://cat.sxiaohe.top/
