--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -878,7 +878,7 @@ note:
 # It may contain bugs and unstable, give feedback when you find the bugs.
 # https://github.com/MoOx/pjax
 pjax:
-  enable: false
+  enable: true
   exclude:
     # - xxxx
 
@@ -965,10 +965,10 @@ inject:
     - <script defer src="/js/lib/zeptojs.min.js"></script>
     #- <link rel="stylesheet" href="/xxx.css">
     - <script defer src="https://jsd.sxiaohe.top/fonts/font_3612150_gkavascgf3n.js"></script>
-    - <script defer src="/js/lib/console.min.js"></script>
   bottom:
     # - <script src="xxxx"></script>
     - <script defer src="/js/fixed_card_widget.js"></script>
+    - <div class="global-music"><div class="aplayer"></div></div>
 
 # CDN
 # Don't modify the following settings unless you know how they work
