--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -991,7 +991,7 @@ CDN:
 
   # Custom format
   # For example: https://cdn.staticfile.org/${cdnjs_name}/${version}/${min_cdnjs_file}
-  custom_format: https://cdn.staticfile.org/${cdnjs_name}/${version}/${min_cdnjs_file}
+  custom_format: https://cdn.iocdn.cc/npm/${name}@${version}/${min_file}
 
   option:
     main_css: /css/index.css
