--- a/source/_data/widget.yml
+++ b/source/_data/widget.yml
@@ -30,9 +30,9 @@ top:
     icon:
     html:
       <div id="schedule-area-left">
-        <div id="schedule-title">距离决赛</div>
+        <div id="schedule-title">距离五一</div>
         <div id="schedule-days">000</div>
-        <div id="schedule-date">2024-12-20</div>
+        <div id="schedule-date">2025-05-01</div>
       </div>
       <div id="schedule-area-right">
         <div class="schedule-r0">
