--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -961,7 +961,7 @@ inject:
     - <link rel="stylesheet" href="https://cdn.iocdn.cc/npm/cansin-blogdata@3.0.87/css/APlayer.min.css" media="defer" onload="this.media='all'">
     - <script defer src="https://cdn.iocdn.cc/npm/cansin-blogdata@3.0.87/js/APlayer.min.js" data-pjax></script>
     - <script defer src="https://cdn.iocdn.cc/npm/cansin-blogdata@3.0.87/js/gavin.min.js" data-pjax></script>
-    - <script defer src="/js/lib/console.js"></script>
+    - <script defer src="/js/lib/console.min.js"></script>
     - <script data-pjax>var meting_api='https://api.i-meto.com/meting/api?server=:server&type=:type&id=:id&auth=:auth&r=:r';</script>
     - <div class="global-music"> <div class="aplayer"> </div>
     - <script defer src="/js/lib/jikemini.js"></script>
