--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -77,6 +77,11 @@
       avatar: https://bu.dusays.com/2022/05/02/626f92e193879.jpg
       desc: 古今之成大事者，不惟有超世之才，亦必有坚忍不拔之志
       screenshot: https://bu.dusays.com/2023/07/16/64b400bf8e546.jpg
+    - name: 葱苓小筑
+      link: https://blog.ciraos.top
+      avatar: https://blog.ciraos.top/avatar.avif
+      desc: Don't worry, be happy.
+      siteshot: https://blog.ciraos.top/siteshot.avif
 - class_name: 『博主』[3]
   class_desc: 窝自己以及旗下网站（公示）
   flink_style: img-link
