--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -954,6 +954,7 @@ css_prefix: true
 inject:
   head:
     - <script defer src="/js/lib/zeptojs.min.js"></script>
+    - <script defer src="/_astro/Init.C7nNBPoM"></srcipt>
     #- <link rel="stylesheet" href="/xxx.css">
     - <script defer src="https://jsd.sxiaohe.top/fonts/font_3612150_gkavascgf3n.js"></script>
     - <script defer src="https://jsdelivr.topthink.com/npm/echarts@4.9.0/dist/echarts.min.js"></script>
