--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -25,7 +25,15 @@ menu:
     开往: https://www.travellings.cn/go.html || fa-fw fa-solid fa-subway || faa-tada
 
 # --------------------------- end ---------------------------
-
+# wiki
+######## Main ########
+# 站点主结构树
+site_tree:
+  # wiki配置
+  wiki:
+    base_dir: wiki # 只影响自动生成的页面路径
+    menu_id: wiki # 未在 front-matter 中指定 menu_id 时，layout 为 wiki 的页面默认使用这里配置的 menu_id
+    sidebar: search_docs, ghissues, related, recent, timeline # for wiki
 # essay 即刻短文
 # --------------------------------------
 essay:
