--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -23,8 +23,20 @@ menu:
     关于本站: /about/ || anzhiyufont anzhiyu-icon-paper-plane || faa-tada
     我的装备: /equipment/ || anzhiyufont anzhiyu-icon-dice-d20 || faa-tada
     开往: https://www.travellings.cn/go.html || fa-fw fa-solid fa-subway || faa-tada
-
 # --------------------------- end ---------------------------
+# 友情链接顶部相关配置
+linkPageTop:
+  enable: true
+  title: 与数百名博主无限进步
+  # 添加博主友链的评论自定义格式
+  addFriendPlaceholder: "昵称（请勿包含博客等字样）：\n网站地址（要求博客地址，请勿提交个人主页）：\n头像图片url（请提供尽可能清晰的图片，我会上传到我自己的图床）：\n描述：\n站点截图（可选）：\n"
+# 朋友圈配置
+friends_vue:
+  enable: false
+  vue_js: https://npm.elemecdn.com/anzhiyu-theme-static@1.1.1/friends/index.4f887d95.js
+  apiurl: # 朋友圈后端地址
+  top_tips: 使用 友链朋友圈 订阅友链最新文章
+  top_background:
 # wiki
 ######## Main ########
 # 站点主结构树
@@ -905,8 +917,8 @@ aplayerInject:
 # position 彈窗位置
 # 可選 top-left / top-center / top-right / bottom-left / bottom-center / bottom-right
 snackbar:
-  enable: false
-  position: bottom-left
+  enable: true
+  position: top-center
   bg_light: '#49b1f5' # The background color of Toast Notification in light mode
   bg_dark: '#1f1f1f' # The background color of Toast Notification in dark mode
 
@@ -972,8 +984,9 @@ inject:
     - <link rel="stylesheet" href="https://jsdelivr.topthink.com/npm/anzhiyu-theme-static@1.0.0/swiper/swiper.min.css" media="print" onload='this.media="all"'>
     - <script defer src="/js/fixed_card_widget.js"></script>
     - <script defer src="/js/lib/calendar.min.js"></script>
-    - <script defer src="/js/lib/jikemini.js"></script>
+    - <script defer src="/js/lib/random.js"></script>
     - <script defer src="/js/waterfall.js"></script> # 瀑布流JS
+    - <script defer src="/js/lib/console.min.js"></script>
 
 # CDN
 # Don't modify the following settings unless you know how they work
