添加wiki页面脚手架（有兴趣可进行fork）

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -42,11 +42,6 @@
       avatar: https://imgse.koxiuqiu.cc/imgse/u/19/2025/02/20/67b737d854192.webp
       descr: 记住你！自己！
       siteshot: https://imgse.koxiuqiu.cc/imgse/u/19/2025/02/20/67b739bef3f9c.png
-    - name: 七七小栈
-      link: https://blog.zsrooj.site/
-      avatar: https://blog.zsrooj.site/img/%E7%BD%91%E7%AB%99%E6%88%AA%E5%9B%BE.png
-      descr: 一个个人博客，记录生活与技术
-      siteshot: https://blog.zsrooj.site/favicon5.ico
     - name: Leonus
       link: https://blog.leonus.cn/
       avatar: https://q1.qlogo.cn/g?b=qq&nk=990320751&s=5
@@ -103,9 +98,9 @@
       descr: 随风飘起 如同浮云
     - name: 苏晓河生活站（还未想好名字）
       link: https://cat.sxiaohe.top/
-      avatar: https://www.sxiaohe.top/img/avatar.avif
+      avatar: https://www.myxz.top/img/avatar.avif
       descr: 随风飘起 如同浮云
     - name: jsd镜像站
       link: https://jsd.sxiaohe.top/
-      avatar: https://www.sxiaohe.top/img/avatar.avif
+      avatar: https://www.myxz.top/img/avatar.avif
       descr: 自用
