--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,12 +1,3 @@
-- class_name: 『推广』[1]
-  class_desc: 对窝博客搭建有帮助以及提供魔改美化、博客质量高的大佬们(时间排序)
-  flink_style: img-link
-  random: false
-  link_list:
-    - name: 雨云
-      link:
-      descr: 柳影曳曳，清酒孤灯，扬笔撒墨，心境如霜
-      siteshot: https://blog.liushen.fun/info/siteshot.jpg
 - class_name: 『推荐友链』[5]
   class_desc: 对窝博客搭建有帮助以及提供魔改美化、博客质量高的大佬们(时间排序)
   flink_style: img-link
@@ -95,6 +86,15 @@
       avatar: https://image.m-c.top/?/images/2024/01/13/Pqeh0v6VaK/ico.jpg
       descr: 用心享受生活
       rss: https://blog.awaae001.top/atom.xml
+# - class_name: 『推广』[1]
+#   class_desc: 对窝博客搭建有帮助以及提供魔改美化、博客质量高的大佬们(时间排序)
+#   flink_style: img-link
+#   random: false
+#   link_list:
+#     - name: 雨云
+#       link:
+#       descr: 柳影曳曳，清酒孤灯，扬笔撒墨，心境如霜
+#       siteshot: https://blog.liushen.fun/info/siteshot.jpg
 - class_name: 『博主』[3]
   class_desc: 窝自己以及旗下网站（公示）
   flink_style: img-link
